// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExchangeStatus > should show expired status 1`] = `
<div>
  <div
    class="flex flex-col overflow-hidden rounded-xl my-6"
  >
    <div
      class="css-6pjap5"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg
          id="circle-cross"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-width="2"
          >
            <circle
              cx="10"
              cy="10"
              r="9"
              stroke-miterlimit="10"
            />
            <path
              d="M7 13l6-6M13 13L7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </g>
        </svg>
      </div>
      <span>
        Error
      </span>
    </div>
    <div
      class="css-1y2ht9o"
    >
      This transaction has expired.
    </div>
  </div>
</div>
`;

exports[`ExchangeStatus > should show failed status 1`] = `
<div>
  <div
    class="flex flex-col overflow-hidden rounded-xl my-6"
  >
    <div
      class="css-6pjap5"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg
          id="circle-cross"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-width="2"
          >
            <circle
              cx="10"
              cy="10"
              r="9"
              stroke-miterlimit="10"
            />
            <path
              d="M7 13l6-6M13 13L7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </g>
        </svg>
      </div>
      <span>
        Error
      </span>
    </div>
    <div
      class="css-1y2ht9o"
    >
      This transaction has failed.
    </div>
  </div>
</div>
`;

exports[`ExchangeStatus > should show refunded status 1`] = `
<div>
  <div
    class="flex flex-col overflow-hidden rounded-xl my-6"
  >
    <div
      class="css-rzhg83"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg
          id="circle-exclamation-mark"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-width="2"
          >
            <circle
              cx="10"
              cy="10"
              r="9"
              stroke-miterlimit="10"
            />
            <path
              d="M10 10.5v-5"
              stroke-linecap="round"
              stroke-miterlimit="10"
            />
            <path
              d="M10 14h0"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </g>
        </svg>
      </div>
      <span>
        Warning
      </span>
    </div>
    <div
      class="css-trjt6n"
    >
      This transaction has been refunded.
    </div>
  </div>
</div>
`;

exports[`ExchangeStatus > should show verifying status 1`] = `
<div>
  <div
    class="flex flex-col overflow-hidden rounded-xl my-6"
  >
    <div
      class="css-rzhg83"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg
          id="circle-exclamation-mark"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-width="2"
          >
            <circle
              cx="10"
              cy="10"
              r="9"
              stroke-miterlimit="10"
            />
            <path
              d="M10 10.5v-5"
              stroke-linecap="round"
              stroke-miterlimit="10"
            />
            <path
              d="M10 14h0"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </g>
        </svg>
      </div>
      <span>
        Warning
      </span>
    </div>
    <div
      class="css-trjt6n"
    >
      This transaction is being verified by the provider.
    </div>
  </div>
</div>
`;
